changing the way we trigger teh / and will upgrade soon the key damn so hard as u cant figure out how its actually functioning

--- a/popup.html
+++ b/popup.html
@@ -34,7 +34,9 @@
       </div>
     </div>
     <div id="overlay">
-      <div id="menu" contenteditable="true">⚙ Menu</div>
+      <div id="menu" contenteditable="true">
+
+      </div>
     </div>
     <script src="class.js"></script>
     <!-- <script src="script.js"></script> -->
