on focus no text,

--- a/popup.html
+++ b/popup.html
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div id="overlay">
-      <div id="menu" contenteditable="true">
+      <div id="menu">
 
       </div>
     </div>
